# ServiceFrameworkExperiments

./: .gitignore  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  LICENSE  README.md  conanfile.txt  notes.md
UnitTest/Common/: AggregateExceptionTest.cpp
UnitTest/Test1/: ServiceFrameworkTest.cpp
UnitTest/Test2/Host/: CooperativeThreadServiceHostTest.cpp  ManagedThreadServiceHostTest.cpp  ManagedThreadServiceProviderTest.cpp  ServiceHostBaseTest.cpp  TestManagedThreadLifecycle.cpp  TestManagedThreadLifecycle.hpp
UnitTest/Test2/Lifecycle/: DispatchContextTest.cpp  ExecutorContextTest.cpp  LifecycleManagerTest.cpp
UnitTest/Test2/Provider/: ServiceProviderProxyTest.cpp  ServiceProviderTest.cpp
UnitTest/Test2/Registry/: ServiceRegistryTest.cpp
UnitTest/Test2/Service/: ProcessResultTest.cpp
UnitTest/Test2/Util/: AsyncProxyHelperTest.cpp
cmake/: ConanToolchainWrapper.cmake
docs/: class-diagrams.md  presentation_async_patterns.md
docs/research/: async_await_overview.md  async_patterns_table.md  boost_asio_event_framework.md  di_dependency_walking.md  service_threading_types.md  single_thread_reentrancy_slides.md
include/Common/: AggregateException.hpp  ComplexData.hpp  SpdLogHelper.hpp
include/Test1/: AddService.hpp  CalculatorService.hpp  ComplexService.hpp  DivideService.hpp  MultiplyService.hpp  ServiceBase.hpp  ServiceConfig.hpp  SubtractService.hpp
include/Test2/Framework/Exception/: DuplicateServiceRegistrationException.hpp  EmptyPriorityGroupException.hpp  InvalidPriorityOrderException.hpp  InvalidServiceFactoryException.hpp  MultipleServicesFoundException.hpp  RegistryExtractedException.hpp  ServiceCastException.hpp  ServiceDisposedException.hpp  ServiceProviderException.hpp  ServiceRegistryException.hpp  UnknownServiceException.hpp  WrongThreadException.hpp
include/Test2/Framework/Host/: CooperativeThreadServiceHost.hpp  EmptyPriorityGroupException.hpp  IThreadSafeServiceHost.hpp  InvalidPriorityOrderException.hpp  InvalidServiceFactoryException.hpp  ManagedThreadHost.hpp  ManagedThreadRecord.hpp  ManagedThreadServiceHost.hpp  ManagedThreadServiceProvider.hpp  ServiceHostBase.hpp  ServiceHostProxy.hpp  ServiceInstanceInfo.hpp  StartServiceRecord.hpp  ThreadRecord.hpp
include/Test2/Framework/Host/Cooperative/: CooperativeThreadHost.hpp  CooperativeThreadServiceHost.hpp
include/Test2/Framework/Host/Managed/: ManagedThreadHost.hpp  ManagedThreadRecord.hpp  ManagedThreadServiceHost.hpp  ManagedThreadServiceProvider.hpp
include/Test2/Framework/Lifecycle/: DispatchContext.hpp  ExecutorContext.hpp  ILifeTracker.hpp  LifecycleManager.hpp  LifecycleManagerConfig.hpp
include/Test2/Framework/Manager/: IServiceManager.hpp
include/Test2/Framework/Provider/: IServiceProvider.hpp  ServiceProvider.hpp  ServiceProviderException.hpp  ServiceProviderProxy.hpp
include/Test2/Framework/Registry/: IServiceRegistry.hpp  ServiceLaunchPriority.hpp  ServiceRegistrationRecord.hpp  ServiceRegistry.hpp  ServiceRegistryException.hpp  ServiceThreadGroupId.hpp
include/Test2/Framework/Service/: IService.hpp  IServiceControl.hpp  IServiceFactory.hpp  ProcessResult.hpp  ProcessStatus.hpp  ServiceCreateInfo.hpp  ServiceCreationInfo.hpp  ServiceDescription.hpp  ServiceInitResult.hpp  ServiceProcessResult.hpp  ServiceShutdownResult.hpp
include/Test2/Framework/Service/Async/: AsyncServiceBase.hpp
include/Test2/Framework/Util/: AsyncProxyHelper.hpp
include/Test2/Services/: AddService.hpp  ServiceConfig.hpp
include/Test2/Services/Add/: AddService.hpp  AddServiceFactory.hpp  IAddService.hpp
include/Test2/Services/Calculator/: CalculatorService.hpp  CalculatorServiceFactory.hpp  CalculatorServiceRegistration.hpp  ICalculatorService.hpp
include/Test2/Services/Divide/: DivideService.hpp  DivideServiceFactory.hpp  IDivideService.hpp
include/Test2/Services/Multiply/: IMultiplyService.hpp  MultiplyService.hpp  MultiplyServiceFactory.hpp
include/Test2/Services/Subtract/: ISubtractService.hpp  SubtractService.hpp  SubtractServiceFactory.hpp
include/Test3/AwaitableToFuture/: ExampleServiceUse.hpp
include/Test3/FutureCallback/: ExampleServiceUse.hpp  README.md  ServiceCallbackReceiver.hpp  ToFutureWithCallback.hpp
include/Test3/FutureCallbackNoLambda/: ExampleServiceUse.hpp  README.md  ServiceCallbackReceiver.hpp  ToFutureWithCallback.hpp
include/Test3/QtPointerCallback/: ExampleServiceUse.hpp  QtPointerCallbackReceiver.hpp  README.md  ToFutureWithCallback.hpp
include/Test3/QtSlotCallback/: ExampleServiceUse.hpp  QtSlotCallbackReceiver.hpp  README.md  ToFutureWithCallback.hpp
include/Test4/: README.md
include/Test4/Framework/Host/: ServiceHostProxy.hpp
include/Test4/Framework/Lifecycle/: LifecycleManager.hpp
include/Test4/Framework/Util/: CompletionCallback.hpp  ServiceCallback_Method.hpp  ServiceCallback_Method_Internal.hpp  ServiceCallback_QPointer.hpp  ServiceCallback_QPointer_Internal.hpp  ServiceCallback_QtSlot.hpp  ServiceCallback_QtSlot_Internal.hpp
include/Test5/: README.md
include/Test5/Framework/Host/: ServiceHostProxy.hpp
include/Test5/Framework/Util/: ExecutorContext.hpp  ServiceCallback_QPointer.hpp  ServiceCallback_QtLambda.hpp  ServiceCallback_QtSlot.hpp  ServiceCallback_StopToken.hpp  ServicePromise_QtSignal.hpp
profiles/: README.md  ninja-debug  ubuntu-ninja-debug  vs-release  windows-ninja-release  windows-vs-debug  windows-vs-release
scripts/: check_conan_config.py  detect_vscode.py  update_vscode_includes.py
src/: main.cpp  test1.cpp  test2.cpp  test3.cpp
src/Common/: AggregateException.cpp
src/Test2/Framework/Config/: ThreadGroupConfig.hpp
src/Test2/Framework/Host/: ServiceHostBase.hpp  ServiceHostProxy.cpp
src/Test2/Framework/Host/Cooperative/: CooperativeThreadHost.cpp  CooperativeThreadServiceHost.hpp
src/Test2/Framework/Provider/: ServiceProviderProxy.cpp
src/Test2/Framework/Registry/: ServiceRegistry.cpp
src/Test2/Registry/: ServiceRegistryTest.cpp
src/Test2/Service/Provider/: ServiceProvider.cpp
src/Test4/Framework/Host/: ServiceHostProxy.cpp
src/Test5/Framework/Host/: ServiceHostProxy.cpp
(+2 files in other folders)
